add second part of tutorial 1

--- a/TN_tutorial1-p1.ipynb
+++ b/TN_tutorial1-p1.ipynb
@@ -14,7 +14,7 @@
    "id": "e1a6c9fc",
    "metadata": {},
    "source": [
-    "# <span style=\"color:#0C45A9\">Python tutorial 1</span>"
+    "# <span style=\"color:#0C45A9\">Python tutorial 1 - part 1</span>"
    ]
   },
   {
