fix render error

--- a/TN_tutorial1-p2.ipynb
+++ b/TN_tutorial1-p2.ipynb
@@ -22,12 +22,12 @@
    "id": "f39200a0",
    "metadata": {},
    "source": [
-    "This is the second part of tutorial 1. In this notebook we will solve the ground-state energy of the quantum Ising model for 3 spin"
+    "This is the second part of tutorial 1. In this notebook we will solve the ground-state energy of the quantum Ising model for 3 spins through exact diagonalisation of the Hamiltonian."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "763f6847",
+   "id": "aba6aa4c",
    "metadata": {},
    "source": [
     "## 1.4. Quantum Ising model on $N=3$ spins"
@@ -35,17 +35,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba4664ea",
+   "id": "06f7f211",
    "metadata": {},
    "source": [
-    "The Hamiltonian for this system is: $H = \\sigma^x_1 \\otimes \\sigma^x_2 + \\sigma^x_2 \\otimes \\sigma^x_3 +  \\sigma^x_3 \\otimes \\sigma^x_1 \n",
-    "+ h\\left( \\sigma^z_1 + \\sigma^z_2 + \\sigma^z_3\\right) $"
+    "The Hamiltonian for this system is: $H = \\sigma^x_1 \\otimes \\sigma^x_2 + \\sigma^x_2 \\otimes \\sigma^x_3 +  \\sigma^x_3 \\otimes \\sigma^x_1 + h\\left( \\sigma^z_1 + \\sigma^z_2 + \\sigma^z_3\\right) $"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "672258d1",
+   "id": "a25e84e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a239cba5",
+   "id": "9d2cb953",
    "metadata": {},
    "source": [
     "Let's get the terms of our Hamiltonian"
@@ -69,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f3485047",
+   "id": "145cf60d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c292fb8",
+   "id": "660994f7",
    "metadata": {},
    "source": [
     "Get a list of possible values of the magnetic field $h$:"
@@ -88,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9333041a",
+   "id": "4dc7bee5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21670b9e",
+   "id": "3bc17ae7",
    "metadata": {},
    "source": [
     "For all the values of $h$, solve by exactly diagonalising and store the ground-state energy $E_0$:"
@@ -105,8 +104,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "d2180e1f",
+   "execution_count": 4,
+   "id": "df9258df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,8 +119,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "540955e8",
+   "execution_count": 5,
+   "id": "670d655b",
    "metadata": {},
    "outputs": [
     {
