--- a/TN_tutorial1.ipynb
+++ b/TN_tutorial1.ipynb
@@ -14,7 +14,7 @@
    "id": "e1a6c9fc",
    "metadata": {},
    "source": [
-    "# <span style=\"color:#0C45A9\">Python tutorial 1 - part 1</span>"
+    "# <span style=\"color:#0C45A9\">Python tutorial 1</span>"
    ]
   },
   {
@@ -22,7 +22,7 @@
    "id": "f39200a0",
    "metadata": {},
    "source": [
-    "This is the first part of tutorial 1. This notebook will first walk you through some Python basics. Then it will show you how to work with tensors and do certain tensor operations, as well as solving the eigenvalue problem."
+    "This notebook will first walk you through some Python basics. Then it will show you how to work with tensors and do certain tensor operations, as well as solving the eigenvalue problem."
    ]
   },
   {
@@ -178,8 +178,8 @@
      "output_type": "stream",
      "text": [
       "Vector: [1 2 3]\n",
-      "Random vector:  [0.69834065 0.97594516 0.43704095]\n",
-      "Complex vector:  [0.6566083 +0.08091732j 0.06426432+0.33736526j 0.87936322+0.36617604j]\n"
+      "Random vector:  [0.04146637 0.06787135 0.52974484]\n",
+      "Complex vector:  [0.03952222+0.63381722j 0.43064786+0.19304179j 0.8521259 +0.96060921j]\n"
      ]
     }
    ],
@@ -217,20 +217,20 @@
      "output_type": "stream",
      "text": [
       "Random 3x3 matrix: \n",
-      " [[0.48716317 0.33920477 0.71568972]\n",
-      " [0.28917661 0.8924418  0.53697932]\n",
-      " [0.06770535 0.36402624 0.12811534]] \n",
+      " [[0.95032773 0.01111104 0.92481503]\n",
+      " [0.96138376 0.68569978 0.51120703]\n",
+      " [0.96441029 0.5155953  0.34882744]] \n",
       "\n",
       "Random 2x2 complex matrix: \n",
-      " [[0.79978234+0.67072675j 0.16323844+0.05649731j]\n",
-      " [0.46313245+0.88992451j 0.05134893+0.26504633j]] \n",
+      " [[0.01574503+0.93283509j 0.33599509+0.32252532j]\n",
+      " [0.57768788+0.9061519j  0.59470599+0.50823113j]] \n",
       "\n",
       "Random complex rank-3 tensor: \n",
-      " [[[0.59649027+0.00726747j 0.03844931+0.34944059j]\n",
-      "  [0.11462565+0.05745964j 0.86164501+0.75181142j]]\n",
+      " [[[0.79875196+0.49431022j 0.19711714+0.29652946j]\n",
+      "  [0.64901131+0.06614763j 0.03954571+0.0366542j ]]\n",
       "\n",
-      " [[0.96376052+0.40899571j 0.9915915 +0.02174726j]\n",
-      "  [0.38138029+0.28636734j 0.35169579+0.08595561j]]]\n"
+      " [[0.56697093+0.02388879j 0.29823362+0.1669452j ]\n",
+      "  [0.35400679+0.18706837j 0.22120327+0.1601003j ]]]\n"
      ]
     }
    ],
@@ -420,18 +420,18 @@
      "output_type": "stream",
      "text": [
       "Tensor: \n",
-      " [[[0.7740384  0.20472894]\n",
-      "  [0.78352312 0.68816694]]\n",
+      " [[[0.4207849  0.97685537]\n",
+      "  [0.90327353 0.86110961]]\n",
       "\n",
-      " [[0.97832058 0.61845683]\n",
-      "  [0.03480743 0.28060889]]] \n",
+      " [[0.21637027 0.68185991]\n",
+      "  [0.57400025 0.7014877 ]]] \n",
       "\n",
       "Transposed tensor: \n",
-      " [[[0.7740384  0.78352312]\n",
-      "  [0.20472894 0.68816694]]\n",
+      " [[[0.4207849  0.90327353]\n",
+      "  [0.97685537 0.86110961]]\n",
       "\n",
-      " [[0.97832058 0.03480743]\n",
-      "  [0.61845683 0.28060889]]]\n",
+      " [[0.21637027 0.57400025]\n",
+      "  [0.68185991 0.7014877 ]]]\n",
       "\n",
       " Methods match:  False\n"
      ]
@@ -467,12 +467,12 @@
      "output_type": "stream",
      "text": [
       "Complex matrix: \n",
-      " [[0.79978234+0.67072675j 0.16323844+0.05649731j]\n",
-      " [0.46313245+0.88992451j 0.05134893+0.26504633j]] \n",
+      " [[0.01574503+0.93283509j 0.33599509+0.32252532j]\n",
+      " [0.57768788+0.9061519j  0.59470599+0.50823113j]] \n",
       "\n",
       "Hermitian conjugate of matrix: \n",
-      " [[0.79978234-0.67072675j 0.46313245-0.88992451j]\n",
-      " [0.16323844-0.05649731j 0.05134893-0.26504633j]]\n"
+      " [[0.01574503-0.93283509j 0.57768788-0.9061519j ]\n",
+      " [0.33599509-0.32252532j 0.59470599-0.50823113j]]\n"
      ]
     }
    ],
