--- a/TN_tutorial3.ipynb
+++ b/TN_tutorial3.ipynb
@@ -47,7 +47,8 @@
     " <br>\n",
     " <p align=\"left\"> where we know $\\Delta_0 = 0$ and $\\Delta_1=1/8$.<br>\n",
     " However, we still don't know $B$ but we can use the relation:\n",
-    " <center> $\\frac{E_{\\alpha}-E_0}{E_1-E_0}=\\frac{\\Delta_{\\alpha}-\\Delta_0}{\\Delta_1-\\Delta_0}=\\frac{\\Delta_{\\alpha}}{\\Delta_1}=8\\Delta_{\\alpha} \\quad \\to \\quad \\boxed{\\Delta_{\\alpha} = \\frac{1}{8}\\frac{E_{\\alpha}-E_0}{E_1-E_0}}$."
+    " <center> $\\frac{E_{\\alpha}-E_0}{E_1-E_0}=\\frac{\\Delta_{\\alpha}-\\Delta_0}{\\Delta_1-\\Delta_0}=\\frac{\\Delta_{\\alpha}}{\\Delta_1}=8\\Delta_{\\alpha} \\quad \\to \\quad \\boxed{\\Delta_{\\alpha} = \\frac{1}{8}\\frac{E_{\\alpha}-E_0}{E_1-E_0}}$. <br>\n",
+    " In this notebook we won't fully diagonalise our matrices, but we will use spa"
    ]
   },
   {
@@ -175,7 +176,7 @@
    "id": "411c73b3",
    "metadata": {},
    "source": [
-    "### 3.1.1. Define Hamiltonians"
+    "### 3.1.1. Define Hamiltonian"
    ]
   },
   {
@@ -183,7 +184,7 @@
    "id": "fd515ad2",
    "metadata": {},
    "source": [
-    "We want to simulatenously diagonalise $H,T$ and $S$, so we consider $H = H_{TFIM}+\\alpha HT + \\beta HS$. We choose $\\alpha$ and $\\beta$ such that the scales of the entries of $H_{TFIM}$, $HT$ and $HS$ are very different. \n",
+    "We want to simulatenously diagonalise $H,T$ and $S$, so we consider $H = H+\\alpha HT + \\beta HS$. We choose $\\alpha$ and $\\beta$ such that the scales of the entries of $H$, $HT$ and $HS$ are very different. \n",
     "<br>Note that $T$ is non-hermitian, so eigenvalues can be complex."
    ]
   },
@@ -198,7 +199,7 @@
     "h = 1\n",
     "\n",
     "H_TFIM = qIsingH(N,h) #PBC quantum Ising\n",
-    "H_TFIM -= 100*N*np.eye(2**N) #make all eigenvalues negative\n",
+    "H_TFIM -= 4*N*np.eye(2**N) #make all eigenvalues negative\n",
     "T = T_op(N)\n",
     "S = S_op(N)\n",
     "\n",
@@ -210,7 +211,7 @@
    "id": "efa820c0",
    "metadata": {},
    "source": [
-    "### 3.1.2. Lanczos method: largest eigenvalues"
+    "### 3.1.2. Sparse diagonalisation method: largest eigenvalues"
    ]
   },
   {
@@ -218,8 +219,7 @@
    "id": "573e1beb",
    "metadata": {},
    "source": [
-    "We obtain only the _num_states_ eigenvectors with smallest energy eigenvalues. This is done by using a Fortran package called _ARPACK_, which provides routines for quickly finding a few eigenvalues/eigenvectors of large sparse matrices. All of the functionality provided in _ARPACK_ is contained within the high-level interface _scipy.sparse.linalg.eigs_.<br>\n",
-    "_NB_: unlike the Lanczos method in other libraries, _scipy.sparse.linalg.eigs_ will ignore degeneracies and only return the unique largest eigenvalues with corresponding eigenvectors."
+    "We obtain only the _num_states_ eigenvectors with smallest energy eigenvalues. This is done by using a Fortran package called _ARPACK_, which provides routines for quickly finding a few eigenvalues/eigenvectors of large sparse matrices. All of the functionality provided in _ARPACK_ is contained within the high-level interface _scipy.sparse.linalg.eigs_."
    ]
   },
   {
@@ -254,12 +254,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "d915c8f1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "E = np.real(np.diag((Psi.conj().T).dot(H_TFIM).dot(Psi))) + 100*N\n",
+    "E = np.real(np.diag((Psi.conj().T).dot(H_TFIM).dot(Psi))) + 4*N #shift back\n",
     "k = np.angle(np.diag((Psi.conj().T).dot(T).dot(Psi)))\n",
     "p = np.diag((Psi.conj().T).dot(S).dot(Psi))\n",
     "p = abs(np.real(((1-p)/2).round()))\n",
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "0bc3078a",
    "metadata": {},
    "outputs": [
@@ -289,8 +289,8 @@
       "Energy: [-12.78490644 -12.62750303 -11.53343072 -11.39143505 -11.39143505\n",
       " -10.34320658 -10.34320658 -10.34320658 -10.34320658 -10.27636202\n",
       " -10.27636202 -10.15536707] \n",
-      "Momentum: [ 0.          0.          0.         -0.62831853  0.62831853 -0.62831853\n",
-      "  0.62831853 -1.25663706  1.25663706 -1.25663706  1.25663706  0.        ] \n",
+      "Momentum: [ 0.          0.          0.         -0.62831853  0.62831853 -1.25663706\n",
+      "  1.25663706 -0.62831853  0.62831853 -1.25663706  1.25663706  0.        ] \n",
       "Parity: [0. 1. 0. 1. 1. 0. 0. 0. 0. 1. 1. 1.]\n",
       "\n",
       "Unique number of eigenvalues: 8 / 12\n"
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "8fd5e2de",
    "metadata": {},
    "outputs": [],
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "fac61c53",
    "metadata": {},
    "outputs": [
@@ -334,7 +334,7 @@
      "text": [
       "Scaling dimension: [0.         0.125      0.99384417 1.1066083  1.1066083  1.93904614\n",
       " 1.93904614 1.93904614 1.93904614 1.99212994 1.99212994 2.0882166 ] \n",
-      "Conformal spin: [ 0.  0.  0. -1.  1. -1.  1. -2.  2. -2.  2.  0.]\n"
+      "Conformal spin: [ 0.  0.  0. -1.  1. -2.  2. -1.  1. -2.  2.  0.]\n"
      ]
     }
    ],
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "30f7d331",
    "metadata": {},
    "outputs": [],
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "1d4feff3",
    "metadata": {
     "scrolled": false
@@ -373,10 +373,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f9a18a692b0>"
+       "<matplotlib.legend.Legend at 0x7f9598a06970>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -440,6 +440,30 @@
     "ax1.legend(handles=legend_elements, fontsize=15)\n",
     "ax2.legend(handles=legend_elements, fontsize=15)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6af28169",
+   "metadata": {},
+   "source": [
+    "## 3.2. Conformal field theory (CFT) data for APBC quantum Ising model on $N$ spins"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "515bf4fa",
+   "metadata": {},
+   "source": [
+    "### 3.1.1. Define Hamiltonians"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37426b7c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
