first half of tutorial 4

--- a/TN_tutorial3.ipynb
+++ b/TN_tutorial3.ipynb
@@ -22,7 +22,7 @@
    "id": "83fe4c7e",
    "metadata": {},
    "source": [
-    "In this tutorial we will obtain universal conformal field theory data from our quantum Ising spin chain model. We will observe finite size effects which originate from the numerical simulation, and would fade as $N\\to\\infty$. In this notebook we won't fully diagonalise our matrices, but we will use **sparce diagonalisation**. We will carry out the following calculations for PBC and APBC. <br>\n",
+    "In this tutorial we will obtain universal conformal field theory data from our quantum Ising spin chain model. We will observe finite size effects which originate from the numerical simulation, and would fade as $N\\to\\infty$. In this notebook we won't fully diagonalise our matrices, but we will use **sparce diagonalisation** through the _scipy.sparse.linalg.eigs()_ function. We will carry out the following calculations for PBC and APBC. <br>\n",
     "We will do this by **simultaneously diagonalising** $H,T,S$: the Hamiltonian ($H$), the translation operator ($T$) and the spin flip operator ($S$), since they are symmetries of the sytem:<br>\n",
     "<br>\n",
     "<center> $H \\left\\vert \\psi_{\\alpha} \\right \\rangle = E_{\\alpha}\\left\\vert \\psi_{\\alpha} \\right \\rangle  $ <center> \n",
@@ -282,7 +282,7 @@
     "#remove degeneracies \n",
     "#E, unique_ix = np.unique(E, return_index=True)\n",
     "#k = k[unique_ix] \n",
-    "#p = p[unique_ix]'''"
+    "#p = p[unique_ix]"
    ]
   },
   {
