--- a/TN_tutorial1.ipynb
+++ b/TN_tutorial1.ipynb
@@ -555,7 +555,7 @@
    "metadata": {},
    "source": [
     "Given two vectors $v, u$ of dimension $m, n$ respectively:\n",
-    "- 1. Outer (Kronecker) product:\n",
+    "1. Outer (Kronecker) product:\n",
     "$~~~~v \\otimes u = \\left[ \\begin{array}{cc} \n",
     "v_{1} u_1 & v_{1}u_2 &\\cdots& v_1 u_n \\\\ \n",
     "v_{2} u_1 & v_{2}u_2 &\\cdots& v_{2} u_n \\\\\n",
@@ -563,7 +563,7 @@
     "v_{m} u_1 & v_mu_2 &\\cdots& v_m u_n\n",
     "\\end{array} \\right]$ <br>\n",
     "<br>\n",
-    "- 2. Dot product: $v\\cdot u = v_1u_1 + v_2u_2 \\cdots v_m u_n$"
+    "2. Dot product: $v\\cdot u = v_1u_1 + v_2u_2 \\cdots v_m u_n$"
    ]
   },
   {
@@ -616,7 +616,7 @@
    "source": [
     "Given two matrices $A,B$ with shapes $m\\times n$ and $q \\times p$ respectively:\n",
     "\n",
-    "- 1. Outer (Kronecker) product:\n",
+    "1. Outer (Kronecker) product:\n",
     "$~~~~A \\otimes B = \\left[ \\begin{array}{cc} \n",
     "a_{11} B & a_{12}B &\\cdots& a_{1n} B \\\\ \n",
     "a_{21} B & a_{22}B &\\cdots& a_{2n} B \\\\\n",
@@ -624,10 +624,10 @@
     "a_{m1} B & a_{m2}B &\\cdots& a_{mn} B\n",
     "\\end{array} \\right]$ <br>\n",
     "<br>\n",
-    "- 2. Standard matrix product ($n=q$ and result is $m\\times p$):\n",
+    "2. Standard matrix product ($n=q$ and result is $m\\times p$):\n",
     "$~~~~AB = C$ where $c_{ij} = a_{i1}b_{1j}+a_{i2}b_{2j}+\\cdots +a_{in}b_{n_j} = \\sum_{k=1}^na_{ik}b_{kj}$. <br>\n",
     "<br>\n",
-    "- 3. Element-wise product ($m=q, n=p$): \n",
+    "3. Element-wise product ($m=q, n=p$): \n",
     "$~~~~AB = a_{11}b_{11}+a_{12}b_{12}+\\cdots+ a_{mn}b_{mn}$."
    ]
   },
