--- a/TN_tutorial3.ipynb
+++ b/TN_tutorial3.ipynb
@@ -31,7 +31,7 @@
     "    <br>\n",
     "<center> $S \\left\\vert \\psi_{\\alpha} \\right \\rangle = (-1)^{p_{\\alpha}}\\left\\vert \\psi_{\\alpha} \\right \\rangle  $ <center> <br>\n",
     "    \n",
-    "From the diagonalisation , we can get $E_{\\alpha}$, $k_{\\alpha}$ and. $p_{\\alpha}$ from: <br>\n",
+    "From the diagonalisation , we can get $E_{\\alpha}$, $k_{\\alpha}$ and $p_{\\alpha}$ from: <br>\n",
     "<center> $ E_{\\alpha} = \\left \\langle  \\psi_{\\alpha} \\right \\vert H \\left\\vert \\psi_{\\alpha} \\right \\rangle $<center>\n",
     "<br>\n",
     "<center> $ e^{ik_{\\alpha}} = \\left \\langle  \\psi_{\\alpha} \\right \\vert T \\left\\vert \\psi_{\\alpha} \\right \\rangle \\; \\to \\; k_{\\alpha}= \\text{angle}\\left( \\left \\langle  \\psi_{\\alpha} \\right \\vert T \\left\\vert \\psi_{\\alpha} \\right \\rangle\\right) $ <center>\n",
@@ -185,7 +185,7 @@
    "id": "411c73b3",
    "metadata": {},
    "source": [
-    "### 3.1.1. Define Hamiltonian"
+    "### 3.1.2. Define Hamiltonian"
    ]
   },
   {
@@ -220,7 +220,7 @@
    "id": "efa820c0",
    "metadata": {},
    "source": [
-    "### 3.1.2. Sparse diagonalisation method: largest eigenvalues"
+    "### 3.1.3. Sparse diagonalisation method: largest eigenvalues"
    ]
   },
   {
@@ -250,7 +250,7 @@
    "id": "ac2f2049",
    "metadata": {},
    "source": [
-    "### 3.1.3. Obtain $E_{\\alpha}$, $k_{\\alpha}$, $p_{\\alpha}$"
+    "### 3.1.4. Obtain $E_{\\alpha}$, $k_{\\alpha}$, $p_{\\alpha}$"
    ]
   },
   {
@@ -317,7 +317,7 @@
    "id": "8681ed15",
    "metadata": {},
    "source": [
-    "### 3.1.4. Numerical estimates of $\\Delta_{\\alpha}$ and $S_{\\alpha}$"
+    "### 3.1.5. Numerical estimates of $\\Delta_{\\alpha}$ and $S_{\\alpha}$"
    ]
   },
   {
@@ -356,7 +356,7 @@
    "id": "4c9d2776",
    "metadata": {},
    "source": [
-    "### 3.1.5. Plot theory vs numerical CFT data comparison"
+    "### 3.1.6. Plot theory vs numerical CFT data comparison"
    ]
   },
   {
