--- a/TN_tutorial4.ipynb
+++ b/TN_tutorial4.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2eca594",
+   "id": "80058644",
    "metadata": {},
    "source": [
     "In this tutorial we will use the power method and sparse multiplication method learned in class. The first section of the tutorial (4.1.) will explore how to use this and we will show that we approach the ground-state.<br>\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "716a6f70",
+   "id": "1015a750",
    "metadata": {},
    "source": [
     "### 4.1.1. Local $N=2$ quantum Ising Hamiltonian"
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "783450ff",
+   "id": "0d92287c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea9c8773",
+   "id": "6560c0c1",
    "metadata": {},
    "source": [
     "### 4.1.2. Sparse multiplication of local Hamiltonian"
@@ -97,7 +97,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "6a30c69b",
+   "id": "3189732d",
    "metadata": {},
    "source": [
     "The function below takes in an arbitrary length vector $\\Psi$ and acts on it with the local term $H$, which corresponds to the $N=2$ Ising model Hamiltonian.<br>\n",
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e317aa12",
+   "id": "f570a318",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adfc0fc5",
+   "id": "2124c941",
    "metadata": {},
    "source": [
     "### 4.1.3. Power method"
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d50620ff",
+   "id": "a086492a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc6c711e",
+   "id": "b84a081d",
    "metadata": {},
    "source": [
     "### 4.1.4. Evaluate and plot"
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6571186a",
+   "id": "65b2755f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1768daa0",
+   "id": "05fbe51d",
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "333d5fd9",
+   "id": "cc6599fa",
    "metadata": {},
    "source": [
     "## 4.2. Lanczos method and conformal data"
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b95b502",
+   "id": "c0a00ca2",
    "metadata": {},
    "source": [
     "### 4.2.1. Sparse multiplication of $H+T$"
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a691d59",
+   "id": "8773fff8",
    "metadata": {},
    "source": [
     "As in Tutorial 3, we define our Hamiltonian to be a linear combination of $H$ and $T$. We will do the same here and multiply this by $\\Psi$."
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1476d993",
+   "id": "9426d372",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f428b1a4",
+   "id": "7ee8e8e8",
    "metadata": {},
    "source": [
     "### 4.2.2. Functions to evaluate $E_{\\alpha}$, $k_{\\alpha}$, $p_{\\alpha}$"
@@ -280,17 +280,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df600023",
+   "id": "355ae3c7",
    "metadata": {},
    "source": [
     "As in Tutorial 3 this is: <br>\n",
-    "<center>$E = \\langle \\Psi|~H~|\\Psi\\rangle,~~~~ K = angle(\\langle \\Psi|~T~|\\Psi\\rangle), ~~~~ p=\\frac{(1-\\langle \\Psi|~S~|\\Psi\\rangle)}{2}$"
+    "<center>$E = \\langle \\Psi_{\\alpha}|~H~|\\Psi_{\\alpha}\\rangle,~~~~ k = angle(\\langle \\Psi_{\\alpha}|~T~|\\Psi_{\\alpha}\\rangle), ~~~~ p=\\frac{(1-\\langle \\Psi_{\\alpha}|~S~|\\Psi_{\\alpha}\\rangle)}{2}$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ac0e2ac1",
+   "id": "02320e36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d898fed7",
+   "id": "d2e239d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +327,7 @@
     "    L = len(Psi)  # Dimension of the vector space\n",
     "    N = round(np.log2(L))  # Number of spins\n",
     "    TPsi = np.reshape(Psi, (2,2**(N-1)))\n",
-    "    TPsi = TPsi.transpose(1,0)\n",
+    "    TPsi = TPsi.transpose(1,0) #action of T operator\n",
     "    TPsi = np.reshape(TPsi, L)\n",
     "    \n",
     "    k = np.angle(Psi.conj().T.dot(TPsi))\n",
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "19bc8471",
+   "id": "6313879d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "888ba028",
+   "id": "f0f0eb10",
    "metadata": {},
    "source": [
     "### 4.2.3. Sparse diagonalisation of a linear operator"
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fab7093f",
+   "id": "13be9fd6",
    "metadata": {},
    "source": [
     "The sparse eigenvalue solving function _scipy.sparse.linalg.eigs()_ does not need to know the individual entries of a matrix to solve the linear system. IT only require the computation of matrix vector products, $Av$ where $v$ is a dense vector. The Python class _scipy.sparse.linalg.LinearOperator_ serves as an abstract interface between iterative solvers and matrix-like objects."
@@ -379,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "7c01e948",
+   "id": "a74d3bf5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "38f2dc94",
+   "id": "77948181",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "01a869fe",
+   "id": "43d6b72c",
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2210c202",
+   "id": "e249131d",
    "metadata": {},
    "source": [
     "### 4.2.4. Theoretical and numerical CFT data"
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d43121c8",
+   "id": "8eb36cd6",
    "metadata": {},
    "source": [
     "It is true for any CFT that $\\Delta_0, S_0 = 0$ and $\\Delta_T, S_T = 2$ (corresponding to stress-energy tensor). <br>\n",
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "03652dd5",
+   "id": "a01892f4",
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "4d2d899d",
+   "id": "7aabb119",
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "d15f6527",
+   "id": "cc0f97ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec3b3864",
+   "id": "fe48c1fc",
    "metadata": {},
    "source": [
     "###  4.2.5. Plot theory vs numerical CFT data comparison"
@@ -522,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "f231e4bb",
+   "id": "b7e866b4",
    "metadata": {},
    "outputs": [
     {
