first part of tutorial 6

--- a/TN_tutorial3.ipynb
+++ b/TN_tutorial3.ipynb
@@ -27,23 +27,23 @@
     "<br>\n",
     "<center> $H \\left\\vert \\psi_{\\alpha} \\right \\rangle = E_{\\alpha}\\left\\vert \\psi_{\\alpha} \\right \\rangle  $ <center> \n",
     "    <br>\n",
-    "<center> $T \\left\\vert \\psi_{\\alpha} \\right \\rangle = e^{ik_{\\alpha}}\\left\\vert \\psi_{\\alpha} \\right \\rangle  $ <center>\n",
+    "<center> $T \\left\\vert \\psi_{\\alpha} \\right \\rangle = e^{iK_{\\alpha}}\\left\\vert \\psi_{\\alpha} \\right \\rangle  $ <center>\n",
     "    <br>\n",
     "<center> $S \\left\\vert \\psi_{\\alpha} \\right \\rangle = (-1)^{p_{\\alpha}}\\left\\vert \\psi_{\\alpha} \\right \\rangle  $ <center> <br>\n",
     "    \n",
-    "From the diagonalisation , we can get $E_{\\alpha}$, $k_{\\alpha}$ and $p_{\\alpha}$ from: <br>\n",
+    "From the diagonalisation , we can get $E_{\\alpha}$, $K_{\\alpha}$ and $p_{\\alpha}$ from: <br>\n",
     "<center> $ E_{\\alpha} = \\left \\langle  \\psi_{\\alpha} \\right \\vert H \\left\\vert \\psi_{\\alpha} \\right \\rangle $<center>\n",
     "<br>\n",
-    "<center> $ e^{ik_{\\alpha}} = \\left \\langle  \\psi_{\\alpha} \\right \\vert T \\left\\vert \\psi_{\\alpha} \\right \\rangle \\; \\to \\; k_{\\alpha}= \\text{angle}\\left( \\left \\langle  \\psi_{\\alpha} \\right \\vert T \\left\\vert \\psi_{\\alpha} \\right \\rangle\\right) $ <center>\n",
+    "<center> $ e^{iK_{\\alpha}} = \\left \\langle  \\psi_{\\alpha} \\right \\vert T \\left\\vert \\psi_{\\alpha} \\right \\rangle \\; \\to \\; K_{\\alpha}= \\text{angle}\\left( \\left \\langle  \\psi_{\\alpha} \\right \\vert T \\left\\vert \\psi_{\\alpha} \\right \\rangle\\right) $ <center>\n",
     "<br>\n",
-    "<center> $ p_{\\alpha} = \\frac{1-\\left \\langle  \\psi_{\\alpha} \\right \\vert S \\left\\vert \\psi_{\\alpha} \\right \\rangle }{2} $ <center>\n",
+    "<center> $ p_{\\alpha} = \\frac{1-\\left \\langle  \\psi_{\\alpha} \\right \\vert \\, S\\, \\left\\vert \\psi_{\\alpha} \\right \\rangle }{2} $ <center>\n",
     " <br>\n",
     "    \n",
     "Finally, we can get the CFT **scaling dimension** ($\\Delta_{\\alpha}$) and **conformal spin** ($S_{\\alpha}$): <br>\n",
     "<br>\n",
     "<center> $ E_{\\alpha} = A + \\frac{B}{N}\\left(\\Delta_{\\alpha}-\\frac{c}{12} \\right) + \\mathcal{O}\\left(\\frac{1}{N^2}\\right)  \\quad\\quad \\to  \\quad\\quad E_{\\alpha} - E_0 = \\frac{B}{N}(\\Delta_{\\alpha}-\\Delta_0)$<center>   \n",
     "    <br>\n",
-    "    <center> $ k_{\\alpha} = \\frac{2\\pi}{N}S_{\\alpha} \\quad\\quad \\to \\quad\\quad \\boxed{S_{\\alpha} = \\frac{N}{2\\pi}k_{\\alpha}}$  <center>    \n",
+    "    <center> $ K_{\\alpha} = \\frac{2\\pi}{N}S_{\\alpha} \\quad\\quad \\to \\quad\\quad \\boxed{S_{\\alpha} = \\frac{N}{2\\pi}K_{\\alpha}}$  <center>    \n",
     " <br>\n",
     " \n",
     " However, we still don't know $B$ but we can use the relation:\n",
@@ -250,7 +250,7 @@
    "id": "ac2f2049",
    "metadata": {},
    "source": [
-    "### 3.1.4. Obtain $E_{\\alpha}$, $k_{\\alpha}$, $p_{\\alpha}$"
+    "### 3.1.4. Obtain $E_{\\alpha}$, $K_{\\alpha}$, $p_{\\alpha}$"
    ]
   },
   {
@@ -258,7 +258,7 @@
    "id": "7d128c77",
    "metadata": {},
    "source": [
-    "Evaluate the energy $E$, momentum $k$ and parity $p$ on the obtained eigenvectors. "
+    "Evaluate the energy $E$, momentum $K$ and parity $p$ on the obtained eigenvectors. "
    ]
   },
   {
@@ -277,12 +277,7 @@
     "ord_idx = np.argsort(E)\n",
     "E = E[ord_idx]\n",
     "k = k[ord_idx] \n",
-    "p = p[ord_idx]\n",
-    "\n",
-    "#remove degeneracies \n",
-    "#E, unique_ix = np.unique(E, return_index=True)\n",
-    "#k = k[unique_ix] \n",
-    "#p = p[unique_ix]"
+    "p = p[ord_idx]"
    ]
   },
   {
@@ -666,7 +661,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -680,7 +675,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
