--- a/TN_tutorial3.ipynb
+++ b/TN_tutorial3.ipynb
@@ -296,15 +296,13 @@
       "Momentum: [ 0.          0.          0.         -0.62831853  0.62831853 -1.25663706\n",
       "  1.25663706 -0.62831853  0.62831853 -1.25663706  1.25663706  0.        ] \n",
       "Parity: [0. 1. 0. 1. 1. 0. 0. 0. 0. 1. 1. 1.]\n",
-      "\n",
-      "Unique number of eigenvalues: 8 / 12\n"
+      "\n"
      ]
     }
    ],
    "source": [
     "print('Energy: %s \\nMomentum: %s \\nParity: %s\\n' %(E,k,p))\n",
-    "E_unique = np.unique(E)\n",
-    "print(\"Unique number of eigenvalues: %s / %s\" %(len(E_unique), len(E)))"
+    "E_unique = np.unique(E)"
    ]
   },
   {
@@ -377,7 +375,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fbb1820a880>"
+       "<matplotlib.legend.Legend at 0x21b7633ca90>"
       ]
      },
      "execution_count": 11,
@@ -589,7 +587,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fbb4966d6d0>"
+       "<matplotlib.legend.Legend at 0x21b76301190>"
       ]
      },
      "execution_count": 17,
