--- a/TN_tutorial6.ipynb
+++ b/TN_tutorial6.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44934868",
+   "id": "82664975",
    "metadata": {},
    "source": [
     "In this tutorial we will work within the free Majorana fermion formalism."
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "151d697f",
+   "id": "275d2f79",
    "metadata": {},
    "source": [
     "This is a system of $2N$ Majorana modes. The algebra is:\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03847d26",
+   "id": "67ed573b",
    "metadata": {},
    "source": [
     "### 6.1.1. Functions for Hamiltonian and Translation operators"
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "816ac26a",
+   "id": "5f1d41ea",
    "metadata": {},
    "source": [
     "#### b) Building translation operator $T_f$"
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e425d314",
+   "id": "72751bce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,15 +141,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e6e61ef",
+   "id": "6595f8f8",
    "metadata": {},
    "source": [
-    "### 6.1.2. Single particle system: diagonalization of  $C$ and $T_f$."
+    "### 6.1.2. Single particle system: diagonalization of  $C$ and $T$."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7dd0b9b4",
+   "id": "9a3a2fba",
    "metadata": {},
    "source": [
     "We obtain the single particle energies $e_\\alpha$ and momenta $k_{\\alpha}$."
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "cc14d265",
+   "id": "f28814f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "cec78c6f",
+   "id": "71d25710",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
     "C_pbc = build_matrix_C(N, h, bc = 1)\n",
     "T_pbc = build_T_operator(N, bc = 1)\n",
     "e_pbc, k_pbc = diagonalise_C_T(C_pbc, T_pbc)\n",
-    "#APERIODIC BC\n",
+    "#ANTIPERIODIC BC\n",
     "C_apbc = build_matrix_C(N, h, bc = -1)\n",
     "T_apbc = build_T_operator(N, bc = -1)\n",
     "e_apbc, k_apbc = diagonalise_C_T(C_apbc, T_apbc)"
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "318b0836",
+   "id": "0bf061d4",
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29151774",
+   "id": "722b6de9",
    "metadata": {},
    "source": [
     "### 6.1.3. Multi-particle system: energies and momenta"
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fc936fd",
+   "id": "e6273c33",
    "metadata": {},
    "source": [
     "Since our multi-particle system is composed of decoupled modes, the energy of the total system is:\n",
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "23a02237",
+   "id": "89b9be46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e01904fd",
+   "id": "b63ef22d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "765d9bb8",
+   "id": "fee5e845",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1a8f5b33",
+   "id": "5a25b2c0",
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f806d4cd",
+   "id": "eb1c4e94",
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae59bf3a",
+   "id": "325d2585",
    "metadata": {},
    "source": [
     "### 6.1.4. Multi-particle system: conformal data"
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6e1fefa",
+   "id": "119f500a",
    "metadata": {},
    "source": [
     "It is true for any CFT that $\\Delta_0 = S_0 = 0$ and $\\Delta_T = S_T = 2$ (corresponding to stress-energy tensor). <br>\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "86a4db0e",
+   "id": "a9ba4583",
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d98545ae",
+   "id": "97b2a362",
    "metadata": {},
    "source": [
     "#### Scaling dimension and conformal spin"
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0605062",
+   "id": "ed5de244",
    "metadata": {},
    "source": [
     "Periodic Boundary Conditions"
@@ -428,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "65aa783f",
+   "id": "ef3005fa",
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21c462cd",
+   "id": "86b85648",
    "metadata": {},
    "source": [
     "A-periodic Boundary Conditions"
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e0f774ad",
+   "id": "b35963a2",
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4881c7b7",
+   "id": "ec60d748",
    "metadata": {},
    "source": [
     "#### Plotting"
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "243b668e",
+   "id": "a9452b6b",
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bdc1fc0",
+   "id": "83c29839",
    "metadata": {},
    "source": [
     "## 6.2. Free Majorana system: entanglement"
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "730fd01c",
+   "id": "b121e129",
    "metadata": {},
    "source": [
     "### 6.2.1. Correlation matrix $\\Gamma$ for ground-state"
@@ -585,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ee609422",
+   "id": "ca93a753",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "a10ff1be",
+   "id": "85eed5f7",
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0583f626",
+   "id": "2637ce12",
    "metadata": {},
    "source": [
     "### 6.2.2. Reduced correlation matrix $\\Gamma^A$"
@@ -643,7 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "dd22cf28",
+   "id": "6f76b386",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "169fcd93",
+   "id": "bb6f2dd0",
    "metadata": {},
    "source": [
     "### 6.2.3. Entanglement entropy in ground-state"
@@ -668,7 +668,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "ab54a35d",
+   "id": "9550674e",
    "metadata": {},
    "source": [
     "![image-2.png](attachment:image-2.png)"
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "840188e9",
+   "id": "b4d69cdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "5013bd52",
+   "id": "e8de0ddc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b3ef682f",
+   "id": "658d7088",
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6443f0e4",
+   "id": "cf709a51",
    "metadata": {},
    "source": [
     "### 6.2.4. Correlations in ground-state"
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "2edf507c",
+   "id": "a322666a",
    "metadata": {},
    "outputs": [
     {
