tutorial 7 (last part not working yet)

--- a/TN_tutorial7.ipynb
+++ b/TN_tutorial7.ipynb
@@ -54,7 +54,7 @@
    "metadata": {},
    "source": [
     "As in the previous tutorial we aim to simultaneously diagonalise the $N\\times N$ matrix $A$ and transfer matrix $T$.<br>\n",
-    "We will observe that free fermions have two zero modes, compared to one zero mode in free Majorana systems. The long distance behaviour of the free fermion model is dominated by the dispersion in the neighbourhood of the zero modes. Therefore, the free fermion system is really like having two copies of a free Majorana model."
+    "We will observe that free fermions have two zero modes, compared to one zero mode in free Majorana systems. The long distance behaviour of the free fermion model is dominated by the dispersion in the neighbourhood of the zero modes. Therefore, the free fermion system is really like having two copies of a free Majorana model. The results are in the same universality class as the $XX$ model."
    ]
   },
   {
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ece79e98",
+   "id": "150883bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b6644833",
+   "id": "8b2c44c7",
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c34fdc31",
+   "id": "5c200a7f",
    "metadata": {},
    "source": [
     "### 7.1.4. Reduced correlation matrix $M^A$"
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "38b066f8",
+   "id": "084d3f43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5bb0aa9",
+   "id": "28490812",
    "metadata": {},
    "source": [
     "### 7.1.5. Entanglement entropy in ground-state"
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "502ec065",
+   "id": "20a07515",
    "metadata": {},
    "source": [
     "This model belongs to a different universality class with respects to the critical Ising model. The central charge in this model is $c = \\frac{\\#zero\\;modes}{2} = \\frac{2}{2}=1$.<br>"
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ea4fba83",
+   "id": "afb4d852",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "bdd8bdba",
+   "id": "f3fdb273",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "869916b8",
+   "id": "862199b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a4d7f6d6",
+   "id": "e248de16",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2d65174",
+   "id": "c4f07f8a",
    "metadata": {},
    "source": [
     "## 7.2. Free fermionic system: more zero-modes"
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d62d2975",
+   "id": "17b089ea",
    "metadata": {},
    "source": [
     "We build a free fermion model with more zero modes. This will affect the ground-states and the universality class they belong to."
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "8c3a16a6",
+   "id": "4b0913ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d3b624f",
+   "id": "a14ab4d8",
    "metadata": {},
    "source": [
     "### 7.2.1. Energy"
@@ -511,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a9ea7bd3",
+   "id": "ef5152f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "e6ff2c50",
+   "id": "b892445b",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ded68d75",
+   "id": "18f91169",
    "metadata": {},
    "source": [
     "### 7.2.2. Ground-state correlation matrix"
@@ -576,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "6f6efae8",
+   "id": "35f916a8",
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dd2717e",
+   "id": "6dbab6e3",
    "metadata": {},
    "source": [
     "### 7.2.3. Entanglement entropy in ground-state"
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "93871c83",
+   "id": "4931f1fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "1ec8ce11",
+   "id": "7a4743a0",
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "be682cc9",
+   "id": "9304d06b",
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04b2b49f",
+   "id": "b0132778",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -693,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32f88f69",
+   "id": "e96422fb",
    "metadata": {},
    "outputs": [],
    "source": []
