--- a/TN_tutorial7.ipynb
+++ b/TN_tutorial7.ipynb
@@ -71,7 +71,7 @@
    "id": "0ff9386d",
    "metadata": {},
    "source": [
-    "#### b) Building $N\\times N$ Hamiltonian matrix $A$ \n",
+    "#### a) Building $N\\times N$ Hamiltonian matrix $A$ \n",
     "Particle perserving quadratic fermionic Hamiltonian."
    ]
   },
@@ -97,7 +97,7 @@
    "id": "dc015637",
    "metadata": {},
    "source": [
-    "#### a) Building translation operator $T_f$"
+    "#### b) Building translation operator $T_f$"
    ]
   },
   {
@@ -121,7 +121,7 @@
    "id": "2927fd9d",
    "metadata": {},
    "source": [
-    "### 7.1.2. Diagonalization of  $A$ and $T$."
+    "### 7.1.2. Diagonalisation of  $A$ and $T$."
    ]
   },
   {
@@ -168,7 +168,7 @@
     "A_pbc = build_matrix_A(N, bc = 1)\n",
     "T_pbc = build_T_operator(N, bc = 1)\n",
     "e_pbc, k_pbc = diagonalise_A_T(A_pbc, T_pbc)\n",
-    "#APERIODIC BC\n",
+    "#ANTIPERIODIC BC\n",
     "A_apbc = build_matrix_A(N, bc = -1)\n",
     "T_apbc = build_T_operator(N, bc = -1)\n",
     "e_apbc, k_apbc = diagonalise_A_T(A_apbc, T_apbc)"
